kubernetes/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: churn-deployment
  labels:
    app: churn-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: churn-api
  template:
    metadata:
      labels:
        app: churn-api
    spec:
      containers:
      - name: churn-api
        image: api_churn:1.0.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
