kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: churn-ingress
spec:
  defaultBackend:
    service:
      name: churn-service
      port:
        number: 8001
